Add chaining support

--- a/tests/data/en.ini
+++ b/tests/data/en.ini
@@ -1,6 +1,7 @@
 ; This file contains en locale messages for tests.
 
 application_name = "MessageFormat Tests - {0}"
+application_version = "v1.0.0"
 
 [plants]
 
