--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ php:
   - 5.5
   - 5.4
 install:
-  - composer install
+  - composer install --prefer-dist
 script:
   - phpunit -c tests/phpunit.xml
