--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
 	},
 	"require": {
 		"php": ">=5.4.0",
-		"ext-intl": "~1.1.0",
-		"karwana/cache": "~1.0.0"
+		"ext-intl": "~1.1.0"
 	},
 	"require-dev": {
 		"phing/phing": "~2.8.1",
