--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	},
 	"require-dev": {
 		"phing/phing": "~2.8.1",
-		"phpunit/phpunit": "~4.1.3"
+		"phpunit/phpunit": "~4.1.3",
+		"tedivm/stash": "~0.12.1"
 	}
 }
